# isttc

./: .gitignore  README.md  environment.yaml  pyproject.toml
benchmarks/: benchmark_acf_sttc_fast.py
examples/: estimate_tau.ipynb  generate_syn_data.ipynb  spike_trains.pkl  trials.pkl  trials_binned.pkl
notebooks/: allen_mouse.ipynb  allen_mouse_compare.ipynb  allen_mouse_compare_full_dataset.ipynb  allen_mouse_compare_full_dataset_same_domain.ipynb  allen_mouse_spike_trains.ipynb  draft_synthetic_data_plots-Copy1.ipynb  draft_synthetic_data_plots.ipynb  methods_example.ipynb  tests_code.ipynb
r_scripts/: mice_taus_single_units.R  mice_taus_unit_duration_effect.R  mice_taus_unit_n_trials_effect.R  mice_taus_units_4methods.R  mice_trial_methods_fr_lv.R  monkey_taus_single_unit.R  syn_5methods_fixed_param.R  syn_bin_size_effect.R  syn_bin_size_effects_trials.R  syn_binsize_effects.R  syn_computation_time.R  syn_computation_time_input_len.R  syn_computation_time_trials.R  syn_computation_time_trials_input_len.R  syn_duration_effect.R  syn_duration_effect_big_ds.R  syn_lv.R  syn_n_trials_effect.R  syn_parametric_dataset.R  syn_parametric_dataset_lv.R  syn_parametric_dataset_trials.R  syn_parametric_dataset_trials_big_ds.R  syn_parametric_inclusion.R  syn_parametric_inclusion_full_rsquared.R  syn_parametric_inclusion_ree_vs_3params.R  tau_constrained_dataset.R
scripts/: bin_spike_train_allen.py  calculate_acf.py  calculate_acf_allen.py  calculate_acf_monkey.py  calculate_tau.py  calculate_tau_mice_data.py  calculate_tau_synthetic_data.py  cfg_global.py  (+14 more)
(+201 files in other folders)
